[tool.poetry]
name = "init-script"
version = "0.1.0"
description = "my linux init script"
authors = ["lxl66566 <lxl66566@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
